css/style.css
/* ... */
.label-group {
  display: block;
  margin-bottom: 0;
  height: 100%; }
  .label-group .label-card {
    padding: 1rem 6px;
    width: 100%;
    cursor: pointer;
    margin: 0;
    border: 1px solid #D6D6D6;
    border-radius: 6px;
    transition: all 0.2s;
    position: relative;
    /*overflow: hidden;*/
    height: 100%; }
    .label-group .label-card:before, .label-group .label-card:after {
      content: '';
      transition: all 0.2s;
      opacity: 0; }
    .label-group .label-card:before {
      border: 15px solid transparent;
      border-bottom-color: #0080CA;
      border-right-color: #0080CA;
      position: absolute;
      right: 0;
      bottom: 0; }
    .label-group .label-card:after {
      width: 6px;
      height: 12px;
      border: 2px solid #fff;
      border-top: 0;
      border-left: 0;
      transform: rotate(42deg);
      position: absolute;
      right: 6px;
      bottom: 5px; }
  .label-group input {
    display: none; }
  .label-group input:checked ~ .label-card:before, .label-group input:checked ~ .label-card:after {
    opacity: 1; }
  .label-group input:checked ~ .label-card, .label-group .label-card:hover {
    border-color: #0080CA;
    background-color: #E9F2F9; }

.input {
  width: 100%;
  border: 1px solid #D6D6D6;
  border-radius: 4px;
  padding: 12px 15px;
  font-weight: 700;
  transition: all 0.2s;
  font-size: 1rem;
  line-height: 1.5; }
  .input:focus {
    border-color: #0171B8; }
  .input::placeholder {
    color: #D6D6D6; }
  @media (max-width: 575px) {
    .input {
      font-size: 14px;
      padding: 11px 15px; } }

.has-label {
  position: relative; }
  .has-label .input {
    padding-top: 21px;
    padding-bottom: 3px; }
    @media (max-width: 575px) {
      .has-label .input {
        padding-bottom: 1px; } }
  .has-label .selectize-control.single .selectize-input:after {
    right: 10px !important; }

.label {
  position: absolute;
  left: 15px;
  top: 8px;
  line-height: 1.2;
  font-size: 12px;
  color: #D6D6D6;
  z-index: 10;
  font-weight: 600; }

.pay-form {
  opacity: 1;
  visibility: visible;
  transition: all 0.2s;
  height: 100%;
  display: flex;
  flex-direction: column; }
  .pay-form.hidden {
    display: none; }
  .pay-form .input.user {
    padding-right: 45px;
    background: url(../img/form-user.svg) calc(100% - 10px) center no-repeat; }
  .pay-form .input.date {
    padding-right: 45px;
    background: url(../img/form-date.svg) calc(100% - 10px) center no-repeat; }
  .pay-form .input.cvv {
    padding-right: 45px;
    background: url(../img/form-lock.svg) calc(100% - 10px) center no-repeat; }
  .pay-form .input.card {
    padding-right: 45px;
    background: url(../img/form-card.svg) calc(100% - 10px) center no-repeat; }
  .pay-form .input.mail {
    padding-right: 45px;
    background: url(../img/form-mail.svg) calc(100% - 10px) center no-repeat; }
  .pay-form .input.wallet {
    padding-right: 45px;
    background: url(../img/form-wallet.svg) calc(100% - 10px) center no-repeat; }
  .pay-form .tip {
    font-size: 14px;
    line-height: 1.3;
    margin-bottom: 1rem; }

@media (min-width: 1600px) {
  .img-pay-form {
    max-width: initial;
    width: 668px; } }

@media (min-width: 1200px) {
  .rtl-xl {
    direction: rtl; }
  .img-slim {
    transform: rotateY(180deg);
    max-width: initial;
    width: 800px;
    margin-right: -350px; } }

.basic-select.single .selectize-input {
  font-size: 1rem;
  border-radius: 4px;
  border-color: #d5d5d5;
  box-shadow: none;
  padding: 24px 30px 6px 15px;
  font-weight: 700;
  white-space: nowrap;
  text-overflow: ellipsis; }
  @media (max-width: 575px) {
    .basic-select.single .selectize-input {
      font-size: 14px;
      padding-top: 21px;
      padding-bottom: 4px; } }
  .basic-select.single .selectize-input > input {
    line-height: 15px !important; }

.basic-select.single .selectize-dropdown-content {
  font-size: 14px; }

.token-select.single .selectize-input {
  font-size: 1.0rem;
  border-radius: 4px;
  border-color: #d5d5d5;
  box-shadow: none;
  padding: 2px 30px 1px 15px;
  font-weight: 700;
  white-space: nowrap;
  text-overflow: ellipsis;
  background: linear-gradient(to bottom, #f3f3f3 0%, #dcdcdc 100%);
  border-color: 1px solid #0080CA; }
  @media (max-width: 575px) {
    .token-select.single .selectize-input {
      font-size: 14px;
      padding-top: 21px;
      padding-bottom: 4px; } }
  .token-select.single .selectize-input > input {
    line-height: 15px !important; }

.token-select.single .selectize-dropdown-content {
  font-size: 14px; }

.switch label {
  margin: 0;
  cursor: pointer;
  display: inline-flex;
  align-items: center; }
  .switch label .lever {
    display: inline-block;
    position: relative;
    width: 60px;
    height: 30px;
    border: 1px solid;
    border-radius: 15px;
    transition: background .3s ease;
    margin: 0 10px; }
    .switch label .lever:after {
      content: '';
      display: inline-block;
      position: absolute;
      width: 20px;
      height: 20px;
      background-color: #0080CA;
      border-radius: 21px;
      left: 5px;
      top: 50%;
      transform: translateY(-50%);
      transition: .2s; }
  .switch label input[type=checkbox] {
    display: none; }
    .switch label input[type=checkbox] ~ .bct {
      color: #0080CA;
      order: -1; }
    .switch label input[type=checkbox]:checked + .lever:after {
      left: 33px; }
    .switch label input[type=checkbox]:checked ~ .bct {
      color: inherit; }
    .switch label input[type=checkbox]:checked ~ .usd {
      color: #0080CA; }

.checkbox-group {
  color: #9C9C9C;
  margin-bottom: 1rem; }
  .checkbox-group .checkbox-label {
    display: inline-flex;
    cursor: pointer;
    position: relative; }
    .checkbox-group .checkbox-label:before {
      content: '';
      display: inline-block;
      width: 21px;
      height: 21px;
      border: 1px solid #D6D6D6;
      border-radius: 3px;
      margin-right: 15px;
      transition: .2s; }
/* ... */

